libs/pavex_cli/tests/ui_tests/generic_handlers_are_not_supported/expectations/stderr.txt
[31m[1mERROR[0m[39m: 
  × One of the input parameters for `app::stream_file::<std::path::PathBuf>`
  │ has a type that I cannot handle.
    ╭─[src/lib.rs:8:1]
  8 │     let mut bp = Blueprint::new();
  9 │     bp.route(f!(crate::stream_file::<std::path::PathBuf>), "/home");
    ·              ──────────────────────┬─────────────────────
    ·                                    ╰── The request handler was registered here
 10 │     bp
    ╰────

Error: 
  × 
   ╭─[src/lib.rs:2:1]
 2 │ 
 3 │ pub fn stream_file<T>(_inner: T) -> pavex_runtime::response::Response {
   ·                               ┬
   ·                               ╰── I do not know how handle this parameter
 4 │     todo!()
   ╰────